--- a/app/src/main/res/layout/activity_break_fast.xml
+++ b/app/src/main/res/layout/activity_break_fast.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_breakfast"
     android:orientation="vertical"
     tools:context="com.localfriend.BreakFastActivity">
 
@@ -11,6 +12,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recy_breakfast"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
