--- a/app/src/main/res/layout/activity_signin_one.xml
+++ b/app/src/main/res/layout/activity_signin_one.xml
@@ -10,8 +10,8 @@
     <include layout="@layout/toolbar_common" />
 
     <LinearLayout
+        android:id="@+id/ll_name"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar_common"
         android:layout_marginTop="@dimen/dim_10"
@@ -44,9 +44,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:background="@null"
-        android:scaleType="fitXY"
+        android:layout_below="@+id/ll_name"
+        android:scaleType="centerCrop"
         android:src="@drawable/walkthroughs" />
 
     <RelativeLayout
@@ -75,12 +75,12 @@
             android:layout_centerVertical="true"
             android:background="@drawable/rounded_curvy_white"
             android:gravity="center"
-            android:paddingBottom="@dimen/dim_7"
-            android:paddingLeft="@dimen/dim_15"
-            android:paddingRight="@dimen/dim_15"
-            android:paddingTop="@dimen/dim_7"
+            android:paddingBottom="@dimen/dim_12"
+            android:paddingLeft="@dimen/dim_30"
+            android:paddingRight="@dimen/dim_30"
+            android:paddingTop="@dimen/dim_12"
             android:text="NEXT"
             android:textColor="@color/blue_text"
-            android:textSize="@dimen/dim_18" />
+            android:textSize="@dimen/dim_14" />
     </RelativeLayout>
 </RelativeLayout>
