--- a/app/src/main/res/layout/breakfast_item.xml
+++ b/app/src/main/res/layout/breakfast_item.xml
@@ -4,19 +4,20 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/dim_10">
+    android:layout_marginLeft="@dimen/dim_60"
+    android:paddingTop="@dimen/dim_10">
 
     <FrameLayout
         android:id="@+id/frame_breakfast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:paddingLeft="@dimen/dim_20">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim_250"
             app:cardBackgroundColor="@color/bg_color"
-            app:cardCornerRadius="@dimen/dim_10"
             app:cardElevation="@dimen/dim_10">
 
             <ImageView
@@ -40,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dim_20"
-        android:layout_marginTop="@dimen/dim_210"
+        android:layout_marginTop="@dimen/dim_215"
         android:background="@drawable/tv_trans_bg"
         android:gravity="center"
         android:padding="@dimen/dim_8"
@@ -67,17 +68,14 @@
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dim_250"
-        android:layout_marginTop="@dimen/dim_230"
+        android:layout_width="@dimen/dim_50"
+        android:layout_height="@dimen/dim_50"
+        android:layout_marginTop="@dimen/dim_225"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/dim_30"
         android:background="@drawable/gradient_circle_bg"
-        android:gravity="center"
-        android:paddingBottom="@dimen/dim_8"
-        android:paddingLeft="@dimen/dim_15"
-        android:paddingRight="@dimen/dim_15"
-        android:paddingTop="@dimen/dim_8"
         android:text="+"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="@dimen/dim_20"
         app:textStyle="@integer/roboto_medium" />
