--- a/app/src/main/res/layout/activity_signin_two.xml
+++ b/app/src/main/res/layout/activity_signin_two.xml
@@ -7,10 +7,10 @@
     android:background="@drawable/main_gradient_bg"
     tools:context="com.localfriend.SigninActivityTwo">
 
-    <include
-        layout="@layout/toolbar_common"/>
+    <include layout="@layout/toolbar_common" />
 
     <LinearLayout
+        android:id="@+id/ll_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar_common"
@@ -18,22 +18,23 @@
         android:orientation="vertical"
         android:padding="@dimen/dim_10">
 
-        <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+        <com.localfriend.fonts.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter your password"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_18"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:textStyle="@integer/roboto_medium" />
 
         <EditText
+            android:id="@+id/edt_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim_10"
             android:backgroundTint="@color/white"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:id="@+id/edt_password"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_16"
 
@@ -41,11 +42,12 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/ll_name"
+        android:layout_marginTop="@dimen/dim_60"
         android:background="@null"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/walkthroughss" />
 
     <RelativeLayout
@@ -55,30 +57,31 @@
         android:layout_marginBottom="@dimen/dim_15"
         android:padding="@dimen/dim_10">
 
-        <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+        <com.localfriend.fonts.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="Step 2 of 2"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_18"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:textStyle="@integer/roboto_medium" />
 
-        <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+        <com.localfriend.fonts.CustomFontTextView
+            android:id="@+id/tv_btn_signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/rounded_curvy_white"
             android:gravity="center"
-            android:id="@+id/tv_btn_signin"
-            android:paddingBottom="@dimen/dim_10"
-            android:paddingLeft="@dimen/dim_15"
-            android:paddingRight="@dimen/dim_15"
-            android:paddingTop="@dimen/dim_10"
+            android:paddingBottom="@dimen/dim_12"
+            android:paddingLeft="@dimen/dim_30"
+            android:paddingRight="@dimen/dim_30"
+            android:paddingTop="@dimen/dim_12"
             android:text="SIGN IN"
-
             android:textColor="@color/blue_text"
-            android:textSize="@dimen/dim_18" />
+            android:textSize="@dimen/dim_14"
+            app:textStyle="@integer/roboto_medium" />
     </RelativeLayout>
 </RelativeLayout>
