--- a/app/src/main/res/layout/activity_signup_three.xml
+++ b/app/src/main/res/layout/activity_signup_three.xml
@@ -48,6 +48,7 @@
         android:layout_below="@+id/lnr_verification"
         android:layout_centerHorizontal="true"
         android:background="@null"
+        android:scaleType="centerCrop"
         android:src="@drawable/basket_with_pt_sans" />
 
     <RelativeLayout
@@ -75,13 +76,13 @@
             android:layout_centerVertical="true"
             android:background="@drawable/rounded_curvy_white"
             android:gravity="center"
-            android:paddingBottom="@dimen/dim_7"
-            android:paddingLeft="@dimen/dim_15"
-            android:paddingRight="@dimen/dim_15"
-            android:paddingTop="@dimen/dim_7"
+            android:paddingBottom="@dimen/dim_12"
+            android:paddingLeft="@dimen/dim_30"
+            android:paddingRight="@dimen/dim_30"
+            android:paddingTop="@dimen/dim_12"
             android:text="NEXT"
             android:textColor="@color/blue_text"
-            android:textSize="@dimen/dim_18"
+            android:textSize="@dimen/dim_14"
             app:textStyle="@integer/roboto_medium" />
     </RelativeLayout>
 </RelativeLayout>
