--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -1,132 +1,179 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EcF2F2"
     android:orientation="vertical"
     android:padding="@dimen/dim_10"
     tools:context="com.localfriend.fragments.AddressFragment">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
 
-    <android.support.design.widget.TextInputLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_10"
-        android:theme="@style/MyTextInputLayout">
+        android:orientation="vertical">
+
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dim_10"-->
+        <!--android:theme="@style/MyTextInputLayout">-->
 
         <EditText
             android:id="@+id/edt_full_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:hint="Full Name"
-            android:background="@drawable/rounded_white"
-            android:padding="@dimen/dim_10"
-            android:imeOptions="actionUnspecified"
+            android:background="@null"
+            android:drawableLeft="@drawable/ic_qstn_box"
+            android:drawablePadding="@dimen/dim_10"
+            android:hint="Name"
             android:inputType="textPersonName"
             android:maxLines="1"
-            android:singleLine="true"
+            android:padding="@dimen/dim_10"
             android:textColor="@color/black"
-            android:textColorHint="@color/blue_text" />
+            android:textColorHint="@color/gray_tab" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_tab"></View>
 
-    </android.support.design.widget.TextInputLayout>
+        <!--</android.support.design.widget.TextInputLayout>-->
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_5"
-        android:theme="@style/MyTextInputLayout">
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dim_5"-->
+        <!--android:theme="@style/MyTextInputLayout">-->
 
         <EditText
             android:id="@+id/edt_flat_no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Flat/House/Office No"
+            android:layout_marginTop="@dimen/dim_10"
+            android:background="@null"
+            android:drawableLeft="@drawable/ic_qstn_box"
+            android:drawablePadding="@dimen/dim_10"
+            android:hint="City"
             android:imeOptions="actionUnspecified"
             android:inputType="text"
-            android:background="@drawable/rounded_white"
-            android:padding="@dimen/dim_10"
             android:maxLines="1"
-            android:singleLine="true"
+            android:padding="@dimen/dim_10"
             android:textColor="@color/black"
-            android:textColorHint="@color/blue_text" />
+            android:textColorHint="@color/gray_tab" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_tab"></View>
+        <!--</android.support.design.widget.TextInputLayout>-->
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_5"
-        android:theme="@style/MyTextInputLayout">
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dim_5"-->
+        <!--android:theme="@style/MyTextInputLayout">-->
 
         <EditText
             android:id="@+id/edt_street_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Street/Office No"
+            android:layout_marginTop="@dimen/dim_10"
+            android:background="@null"
+            android:drawableLeft="@drawable/ic_qstn_box"
+            android:drawablePadding="@dimen/dim_10"
+            android:hint="Area"
             android:imeOptions="actionUnspecified"
             android:inputType="text"
-            android:background="@drawable/rounded_white"
-            android:padding="@dimen/dim_10"
             android:maxLines="1"
-            android:singleLine="true"
+            android:padding="@dimen/dim_10"
             android:textColor="@color/black"
-            android:textColorHint="@color/blue_text" />
+            android:textColorHint="@color/gray_tab" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_tab"></View>
 
-    </android.support.design.widget.TextInputLayout>
+        <!--</android.support.design.widget.TextInputLayout>-->
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_5"
-        android:theme="@style/MyTextInputLayout">
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dim_5"-->
+        <!--android:theme="@style/MyTextInputLayout">-->
 
         <EditText
             android:id="@+id/edt_city_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="City"
+            android:layout_marginTop="@dimen/dim_10"
+            android:background="@null"
+            android:drawableLeft="@drawable/ic_qstn_box"
+            android:drawablePadding="@dimen/dim_10"
+            android:hint="Colony"
             android:imeOptions="actionUnspecified"
             android:inputType="text"
-            android:background="@drawable/rounded_white"
-            android:padding="@dimen/dim_10"
             android:maxLines="1"
-            android:singleLine="true"
+            android:padding="@dimen/dim_10"
             android:textColor="@color/black"
-            android:textColorHint="@color/blue_text" />
+            android:textColorHint="@color/gray_tab" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_tab"></View>
 
-    </android.support.design.widget.TextInputLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dim_10"
+            android:background="@null"
+            android:drawableLeft="@drawable/ic_qstn_box"
+            android:drawablePadding="@dimen/dim_10"
+            android:hint="Flat/House/Office No."
+            android:imeOptions="actionUnspecified"
+            android:inputType="text"
+            android:maxLines="1"
+            android:padding="@dimen/dim_10"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray_tab" />
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_5"
-        android:theme="@style/MyTextInputLayout">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_tab"></View>
+        <!--</android.support.design.widget.TextInputLayout>-->
+
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dim_5"-->
+        <!--android:theme="@style/MyTextInputLayout">-->
 
         <EditText
             android:id="@+id/edt_phone_no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dim_10"
+            android:background="@null"
+            android:drawableLeft="@drawable/ic_qstn_box"
+            android:drawablePadding="@dimen/dim_10"
             android:hint="Mobile No"
-            android:imeOptions="actionUnspecified"
             android:inputType="phone"
             android:maxLines="1"
-            android:background="@drawable/rounded_white"
             android:padding="@dimen/dim_10"
             android:textColor="@color/black"
-            android:textColorHint="@color/blue_text" />
+            android:textColorHint="@color/gray_tab" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_tab"></View>
 
-    </android.support.design.widget.TextInputLayout>
-</LinearLayout>
+        <!--</android.support.design.widget.TextInputLayout>-->
+    </LinearLayout>
+
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_make_payment"
         android:layout_width="match_parent"
