--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -11,7 +11,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recy_cart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/tv_checkout"
+       android:paddingLeft="@dimen/dim_15"
+        android:paddingRight="@dimen/dim_15"
         android:layout_marginTop="?actionBarSize" />
 
     <com.localfriend.fonts.CustomFontTextView
