--- a/app/src/main/res/layout/activity_signup_three.xml
+++ b/app/src/main/res/layout/activity_signup_three.xml
@@ -7,18 +7,20 @@
     android:background="@drawable/main_gradient_bg"
     tools:context="com.localfriend.SignupActivityThree">
 
-    <include layout="@layout/toolbar_common" />
+    <include
+        layout="@layout/toolbar_common" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/lnr_verification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/toolbar_common"
-        android:layout_marginTop="@dimen/dim_10"
-        android:orientation="vertical"
         android:padding="@dimen/dim_10">
 
         <com.localfriend.fonts.CustomFontTextView
+            android:id="@+id/tv_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="To Complete your phone number verification,\nplease enter the 6-digit verification code"
@@ -32,6 +34,7 @@
             android:id="@+id/edt_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_label"
             android:layout_marginTop="@dimen/dim_10"
             android:backgroundTint="@color/white"
             android:inputType="number"
@@ -40,12 +43,45 @@
             android:textSize="@dimen/dim_16"
 
             />
-    </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_label"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lnr_verification"
+        android:id="@+id/rel_timer"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Resend Code in"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_15" />
+
+        <TextView
+            android:id="@+id/txt_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dim_5"
+            android:layout_toRightOf="@+id/timer"
+            android:text="00 : 60"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_15" />
+    </RelativeLayout>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lnr_verification"
+        android:layout_below="@+id/rel_timer"
         android:layout_centerHorizontal="true"
         android:background="@null"
         android:scaleType="centerCrop"
